added premake settings for linux - x11 compilation with CodeLite

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,12 @@ MinSizeRel
 RelWithDebInfo
 *.opensdf
 
+# Codelite
+*.workspace
+*.project
+*.mk
+GLFW.txt
+
 # Xcode clutter
 GLFW.build
 GLFW.xcodeproj
